[package]
name = "roers"
version = "0.4.0"
edition = "2021"
authors = ["Dongze He <dhe17@umd.edu>", "Rob Patro <rob@cs.umd.edu>"]
description = "A tool to prepare augmented annotations for single-cell RNA-seq analysis."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/roers"
homepage = "https://github.com/COMBINE-lab/roers"
include = [
  "/src/lib/lib.rs",
  "/src/main.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
]
keywords = ["genomics", "GTF-GFF", "splici", "scRNA-seq", "augmented-reference"]
categories = ["science", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "roers"
path = "src/main.rs"

[lib]
name = "roers"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive", "wrap_help", "cargo"] }
grangers = { path = "../grangers", version = "0.5.0" }
# grangers = { git = "https://github.com/COMBINE-lab/grangers.git", branch = "dev", version = "0.5.0" }
polars = { version = "0.49.1", features = [
  "lazy",
  "dataframe_arithmetic",
  "checked_arithmetic",
  "rows",
  "dtype-struct",
  "dtype-categorical",
  "list_eval",
  "concat_str",
  "strings",
  "regex",
  "timezones"
] }
peak_alloc = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
noodles = { version = "0.104.0", features = ["gtf", "gff", "fasta", "core"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
itertools = "0.14.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
